@@ -59,6 +59,25 @@ struct mpd_connection;
  */
 struct mpd_playlist;
 
+/**
+ * MPDs queue save modes.
+ *
+ * @since libmpdclient 2.21, MPD 0.24.
+ */
+enum mpd_queue_save_mode {
+	/** Create new playlist */
+	MPD_QUEUE_SAVE_MODE_CREATE = 0,
+
+	/** Replace existing playlist */
+	MPD_QUEUE_SAVE_MODE_REPLACE,
+
+	/** Append to existing playlist */
+	MPD_QUEUE_SAVE_MODE_APPEND,
+
+	/** Unknown queue save mode */
+	MPD_QUEUE_SAVE_MODE_UNKNOWN
+};
+
 #ifdef __cplusplus
 extern "C" {
 #endif
@@ -373,6 +392,59 @@ mpd_send_save(struct mpd_connection *connection, const char *name);
  */
 bool
 mpd_run_save(struct mpd_connection *connection, const char *name);
+
+/**
+ * Saves the current queue as a m3u file in the playlist directory
+ * (i.e. name.m3u).
+ * This function supports the mode argument that can be
+ * MPD_QUEUE_SAVE_MODE_CREATE: creates a new playlist, same as mpd_send_save
+ * MPD_QUEUE_SAVE_MODE_REPLACE: replaces an existing playlist
+ * MPD_QUEUE_SAVE_MODE_APPEND: appends to an existing playlist
+ *
+ * @since libmpdclient 2.21, MPD 0.24.
+ *
+ * @param connection the connection to MPD
+ * @param name the name of the playlist file
+ * @param mode the desired save mode
+ * @return true on success, false on error
+ */
+bool
+mpd_send_save_queue(struct mpd_connection *connection, const char *name,
+			enum mpd_queue_save_mode mode);
+
+/**
+ * Shortcut for mpd_send_save_queue() and mpd_response_finish().
+ *
+ * @since libmpdclient 2.21, MPD 0.24.
+ *
+ * @param connection the connection to MPD
+ * @param name the name of the playlist file
+ * @param mode the desired save mode
+ * @return true on success, false on error
+ */
+bool
+mpd_run_save_queue(struct mpd_connection *connection, const char *name,
+			enum mpd_queue_save_mode mode);
+
+/**
+ * Looks up the name of the specified queue save mode.
+ *
+ * @return the name, or NULL if the queue save mode is not valid
+ *
+ * @since libmpdclient 2.21.
+ */
+const char *
+mpd_lookup_queue_save_mode(enum mpd_queue_save_mode mode);
+
+/**
+ * Parse the string to check which queue save mode it contains.
+ *
+ * @return the queue save mode enum
+ *
+ * @since libmpdclient 2.21.
+ */
+enum mpd_queue_save_mode
+mpd_parse_queue_save_mode(const char *mode);
 
 /**
  * Load a stored playlist into the queue.
